# interface

./: .gitignore  .gitlab-ci.yml  BUILD.md  BUILD_ANDROID.md  BUILD_LINUX.md  BUILD_MACOS.md  BUILD_OSX.md  BUILD_WIN.md  CMakeLists.txt  CODING_STANDARD.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  VCPKG.md  changelog.txt  ecosystem.config.js  hifi_android.py  hifi_qt.py  hifi_utils.py  hifi_vcpkg.py  hifi_vcpkg_wip.py  notes.md  prebuild.py  tivoli-agpl3-header.txt
.github/workflows/: apidocs.yml  docker_build_images.yml  linux-build-image.yml  linux.Dockerfile  pr_build.yml
.github/workflows_hifi/: dump.yml  main_build.yml  master_build.yml
.github/workflows_wip/: apidocs.yml  linux_build_images.yml  pr_build.yml
.gitlab/: PKGBUILD  apidocs.gitlab-ci.yml  deploy.gitlab-ci.yml  deploy.js  finalize.gitlab-ci.yml  linux.gitlab-ci.yml  package.json  qt.gitlab-ci.yml  signtool.js  tivoli-scripts.py  windows.gitlab-ci.yml
.gitlab/aur/: PKGBUILD
.gitlab/unused/: macos.gitlab-ci.yml
.gitlab/vc-redist-unzip/: vc-redist-unzip.py
android/: build.gradle  build_android.sh  containerized_build.sh  setupGVR.gradle
android/docker/: Dockerfile
assignment-client/src/: Agent.cpp  AssignmentClientMonitor.cpp  main.cpp
cmake/: compiler.cmake  init.cmake
cmake/macros/: AddCrashpad.cmake  AddResourcesToMacOSBundle.cmake  AutoScribeShader.cmake  FindNodeJS.cmake  FixupInterface.cmake  PackageLibrariesForDeployment.cmake  SetFromEnv.cmake  SetPackagingParameters.cmake  SetupHifiClientServerPlugin.cmake  SetupHifiLibrary.cmake  SetupHifiPlugin.cmake  TargetAssimp.cmake  TargetBrotli.cmake  TargetCrashpad.cmake  TargetDiscordGameSDK.cmake  TargetDraco.cmake  TargetGifH.cmake  TargetGlad.cmake  TargetHifiAudioCodec.cmake  TargetLeapMotion.cmake  TargetLibsndfile.cmake  TargetLibspnav.cmake  TargetNeuron.cmake  TargetNvtt.cmake  TargetOpenSSL.cmake  TargetOpenXR.cmake  TargetSteamworks.cmake  TargetVorbis.cmake  TargetWebRTC.cmake
cmake/modules/: FindCrashpad.cmake  MacOSXBundleInfo.plist.in
cmake/templates/: BuildInfo.h.in  NSIS.template.in
docker/: .gitignore  Dockerfile  README.md  digitalocean.json  extract-so.py  linux.Dockerfile
docker/ice/: Dockerfile
docker/ice-server/: Dockerfile
docker/server/: .dockerignore  Dockerfile  Dockerfile.arm64v8  auto-updater.js  docker-compose.yml  ecosystem.config.js  modify-domain-port.py  supervisor.conf
domain-server/resources/: describe-settings.json
domain-server/src/: AssetsBackupHandler.cpp  AssetsBackupHandler.h  DomainGatekeeper.cpp  DomainMetadata.cpp  DomainMetadata.h  DomainPrometheusExporter.cpp  DomainPrometheusExporter.h  DomainServer.cpp  DomainServer.h  DomainServerNodeData.cpp  DomainServerSettingsManager.cpp  main.cpp
howtos/: BUILD.md  BUILD_LINUX.md  BUILD_OSX.md  BUILD_WIN.md  CODING_STANDARD.md  INSTALL.md
ice-server/: CMakeLists.txt
ice-server/src/: IceServer.cpp  main.cpp
interface/: .gitignore  CMakeLists.txt
interface/i18n/: interface_da.ts  interface_en.ts
interface/icon/: interface-beta.icns  interface.icns
interface/src/: AboutUtil.cpp  AboutUtil.h  AndroidHelper.cpp  AppNapDisabler.mm  Application.cpp  Application.h  Application_render.cpp  AvatarBookmarks.cpp  Bookmarks.cpp  ConnectionMonitor.cpp  ConnectionMonitor.h  CrashHandler_Crashpad.cpp  Crashpad.cpp  DiscordRichPresence.cpp  DiscordRichPresence.h  FancyCamera.cpp  FancyCamera.h  LODManager.cpp  Menu.cpp  Menu.h  ModelPackager.cpp  ModelPropertiesDialog.cpp  PerformanceManager.cpp  PerformanceManager.h  RefreshRateManager.cpp  RefreshRateManager.h  UIUtil.cpp  (+5 more)
plugins/: .gitignore  CMakeLists.txt
plugins/example-plugin/: CMakeLists.txt
plugins/example-plugin/src/: ExampleScriptPlugin.cpp
plugins/examplePlugin/: CMakeLists.txt
plugins/examplePlugin/src/: ExampleScriptPlugin.h  plugin.json
plugins/hifi-codec-plugin/: CMakeLists.txt
plugins/hifiLeapMotion/: CMakeLists.txt
plugins/hifiNeuron/: CMakeLists.txt
plugins/js-api-example-plugin/: CMakeLists.txt
plugins/kinect-plugin/: CMakeLists.txt
plugins/leapmotion-plugin/: CMakeLists.txt
plugins/neuron-plugin/: CMakeLists.txt
plugins/oculus/: CMakeLists.txt
plugins/oculus-legacy-plugin/: CMakeLists.txt
plugins/oculus-plugin/: CMakeLists.txt
plugins/oculus-plugin/src/: OculusControllerManager.cpp  OculusDisplayPlugin.cpp
plugins/openvr/: CMakeLists.txt
plugins/openvr-plugin/: CMakeLists.txt
plugins/openvr-plugin/src/: OpenVrDisplayPlugin.cpp  OpenVrHelpers.cpp  ViveControllerManager.cpp  ViveControllerManager.h
plugins/openvr/src/: OpenVrHelpers.cpp  ViveControllerManager.cpp
plugins/openxr-plugin/: CMakeLists.txt
plugins/openxr-plugin/src/: OpenXrDisplayPlugin.cpp  OpenXrDisplayPlugin.h  OpenXrHelpers.cpp  OpenXrHelpers.h  OpenXrInputPlugin.cpp  OpenXrInputPlugin.h  OpenXrProvider.cpp  XrControllerManager.cpp  XrControllerManager.h  plugin.json
plugins/osc-plugin/: CMakeLists.txt
plugins/osc-plugin/src/: OscPlugin.cpp
plugins/pcm-codec-plugin/: CMakeLists.txt
plugins/sdl2-plugin/: CMakeLists.txt
plugins/sdl2-plugin/src/: SDL2Manager.cpp
plugins/sixense-plugin/: CMakeLists.txt
plugins/sixense-plugin/src/: SixenseManager.cpp
plugins/spacemouse-linux-plugin/: CMakeLists.txt  spacemouseCamera.js
plugins/spacemouse-linux-plugin/src/: SpacemouseDevice.cpp  SpacemouseDevice.h  SpacemouseManager.cpp  SpacemouseManager.h  plugin.json
plugins/spacemouse-plugin/: CMakeLists.txt
plugins/steam-plugin/: CMakeLists.txt
plugins/tea-protocol-plugin-prebuilt/: .gitignore  CMakeLists.txt
plugins/teaProtocolPrebuilt/: .gitignore  CMakeLists.txt
plugins/vorbisCodec/: CMakeLists.txt
plugins/vorbisCodec/src/: VorbisCodecManager.cpp  VorbisCodecManager.h  VorbisCodecProvider.cpp  plugin.json
script-archive/: avatarSelector.js  lobby.js
scripts/: .gitignore  .prettierrc  defaultScripts.js
tivoli-scripts/: .gitignore  CMakeLists.txt  README.md  build-hashed.js  package.json
tools/: atp-extract.py  make_appdir.py  shadergen.py  vcpkg-ports-updater.py
tools/vhacd-util/: CMakeLists.txt
tools/vhacd-util/src/: VHACDUtil.cpp
(+1403 files in other folders)
